--- a/languages/csharp.org
+++ b/languages/csharp.org
@@ -1,4 +1,5 @@
 * Codebases
+- Advent of C# https://csadvent.christmas/archive/2023
 - Discord Bot https://gitlab.com/Kwoth/nadekobot
 * Standard Library
 - https://en.wikipedia.org/wiki/Standard_Libraries_(CLI)
